--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://bitbucket.org/egco427-contactlist-assignment-130-200/contactlists_api/issues"
   },
-  "homepage": "https://bitbucket.org/egco427-contactlist-assignment-130-200/contactlists_api#readme"
+  "homepage": "https://bitbucket.org/egco427-contactlist-assignment-130-200/contactlists_api#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mongodb": "^5.1.0"
+  }
 }
